2006-01-10  Bruno Haible  <bruno@clisp.org>

	* localcharset.c: Assume ANSI C. Fixes a gcc warning.
	Reported by Werner Lemberg <wl@gnu.org>.

2005-12-25  Bruno Haible  <bruno@clisp.org>

	Fix compilation error when plural.c is generated by bison-2.1.
	* Makefile.in (PLURAL_DEPS_yes, PLURAL_DEPS_no): New macros.
	(plural.$lo): Add conditional dependency to libintl.h.

2005-12-04  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* relocatable.c: Include <windows.h> also on Cygwin.
	(DllMain): Add support for Cygwin.
	(get_shared_library_fullname): Update.
	Patches partially from Charles Wilson <cygwin@cwilson.fastmail.fm>.

2005-10-09  Bruno Haible  <bruno@clisp.org>
2002-07-24  Ulrich Drepper  <drepper@redhat.com>

	* explodename.c (_nl_explode_name): Simplify.

2005-10-09  Bruno Haible  <bruno@clisp.org>
2002-07-24  Ulrich Drepper  <drepper@redhat.com>

	* explodename.c: Recognize the syntax
	  language[_territory][.codeset][@modifier]
	instead of only
	  language[_territory[.codeset]][@modifier]
	(_nl_find_language): Accept '.' as terminator.
	(_nl_explode_name): Accept to parse a codeset without a territory.
	Accept an underscore in the territory.

2005-10-09  Bruno Haible  <bruno@clisp.org>
2002-07-24  Ulrich Drepper  <drepper@redhat.com>

	* explodename.c (_nl_find_language, _nl_explode_name): Remove support
	for CEN-style locale variables. It was never used and shouldn't be
	since it's not portable.
	* finddomain.c (_nl_find_domain): Likewise.
	* l10nflist.c (_nl_make_l10nflist): Likewise.
	* loadinfo.h (_nl_make_l10nflist, _nl_explode_name): Likewise.
	(CEN_*, XPG_SPECIFIC): Remove macros.
	(XPG_TERRITORY): Renamed from TERRITORY.

2005-08-28  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in: Add IN_LIBGLOCALE conditional.
	* Makefile.in (libgnuintl.h, libintl.h): Remove the IN_LIBGLOCALE
	conditional.
	* dcigettext.c [IN_LIBGLOCALE]: Include also <libintl.h>, for
	bindtextdomain().

2005-08-25  Bruno Haible  <bruno@clisp.org>
